--- a/juhan.html
+++ b/juhan.html
@@ -5,11 +5,10 @@
 <script src="https://d3js.org/d3.v4.js"></script>
 
 <!-- Create a div where the graph will take place -->
-  <h3 style="text-align:center">Avg Temperature  vs Distance Walked</h3>
 <div id="my_dataviz"></div>
-      <h3 >From this graph, we can conclude that Viet walks considerably less than the other individuals.</h3>
-      <h3 >It is evident that more walking is done when the temperature is warmer and less walking is done when it is cold.</h3>
+<h3> It is evident that the majority of walking is done when there is no precipitation!</h3>
 
+<h3>The graph indicates that Avinash does the most walking when it is raining!</h3>
 <script>
 
 // set the dimensions and margins of the graph
@@ -27,11 +26,11 @@ var svg = d3.select("#my_dataviz")
           "translate(" + margin.left + "," + margin.top + ")");
 
 //Read the data
-d3.csv("https://raw.githubusercontent.com/avinashjairam/Data-Visualization-Class-Groupwork-/master/editedCompleteDataset.csv", function(data) {
+d3.csv("https://raw.githubusercontent.com/JuhanChoi/Fall-2019-Data-Visualization/master/juhan.csv", function(data) {
 
   // Add X axis
   var x = d3.scaleLinear()
-    .domain([0, 90])
+    .domain([0, 2])
     .range([ 0, width ]);
   svg.append("g")
     .attr("transform", "translate(0," + height + ")")
@@ -39,7 +38,7 @@ d3.csv("https://raw.githubusercontent.com/avinashjairam/Data-Visualization-Class
 
   // Add Y axis
   var y = d3.scaleLinear()
-    .domain([0, 8])
+    .domain([0, 10])
     .range([ height, 0]);
   svg.append("g")
     .call(d3.axisLeft(y));
@@ -50,7 +49,7 @@ d3.csv("https://raw.githubusercontent.com/avinashjairam/Data-Visualization-Class
     .attr("x", width/2 + 60)
     .attr("y", height + margin.top - 10)
     .style("font-size", "11px")
-    .text("Temperature (Farenheit)");
+    .text("Precipitation (inch)");
 
   // Add Y axis label
   svg.append("text")
@@ -64,11 +63,11 @@ d3.csv("https://raw.githubusercontent.com/avinashjairam/Data-Visualization-Class
   // Add Head
   svg.append("text")
     .attr("x", (width / 2))
-    .attr("y", 570)
+    .attr("y", 10)
     .attr("text-anchor", "middle")
     .style("font-size", "16px")
     .style("text-decoration", "underline")
-    .text("Avg Temperature  vs Distance Walked");
+    .text("Precipitation vs Distance");
 
   // Add dots of Avinash data
   svg.append('g')
@@ -76,9 +75,9 @@ d3.csv("https://raw.githubusercontent.com/avinashjairam/Data-Visualization-Class
     .data(data)
     .enter()
     .append("circle")
-      .attr("cx", function (d) { return x(d.Avg_Temperature); } )
+      .attr("cx", function (d) { return x(d.Precipitation); } )
       .attr("cy", function (d) { return y(d.Avinash_Distance); } )
-      .attr("r",4 )
+      .attr("r", 4)
       .style("fill", "Red")
 
   // Add dots of Juhan data
@@ -87,7 +86,7 @@ d3.csv("https://raw.githubusercontent.com/avinashjairam/Data-Visualization-Class
     .data(data)
     .enter()
     .append("circle")
-      .attr("cx", function (d) { return x(d.Avg_Temperature); } )
+      .attr("cx", function (d) { return x(d.Precipitation); } )
       .attr("cy", function (d) { return y(d.Juhan_Distance); } )
       .attr("r", 4)
       .style("fill", "Orange")
@@ -98,7 +97,7 @@ d3.csv("https://raw.githubusercontent.com/avinashjairam/Data-Visualization-Class
     .data(data)
     .enter()
     .append("circle")
-      .attr("cx", function (d) { return x(d.Avg_Temperature); } )
+      .attr("cx", function (d) { return x(d.Precipitation); } )
       .attr("cy", function (d) { return y(d.Daniel_Distance); } )
       .attr("r", 4)
       .style("fill", "Yellow")
@@ -109,7 +108,7 @@ d3.csv("https://raw.githubusercontent.com/avinashjairam/Data-Visualization-Class
     .data(data)
     .enter()
     .append("circle")
-      .attr("cx", function (d) { return x(d.Avg_Temperature); } )
+      .attr("cx", function (d) { return x(d.Precipitation); } )
       .attr("cy", function (d) { return y(d.Viet_Distance); } )
       .attr("r", 4)
       .style("fill", "Green")
@@ -120,72 +119,22 @@ d3.csv("https://raw.githubusercontent.com/avinashjairam/Data-Visualization-Class
     .data(data)
     .enter()
     .append("circle")
-      .attr("cx", function (d) { return x(d.Avg_Temperature); } )
+      .attr("cx", function (d) { return x(d.Precipitation); } )
       .attr("cy", function (d) { return y(d.Avg_Distance); } )
       .attr("r", 4)
       .style("fill", "Blue")
 
 // Handmade legend
-svg.append("circle")
-    .attr("cx",600)
-    .attr("cy",-30)
-    .attr("r", 3)
-    .style("fill", "Red")
-svg.append("circle")
-    .attr("cx",600)
-    .attr("cy",-20)
-    .attr("r", 3)
-    .style("fill", "Orange")
-svg.append("circle")
-    .attr("cx",600)
-    .attr("cy",-10)
-    .attr("r", 3)
-    .style("fill", "Yellow")
-svg.append("circle")
-    .attr("cx",600)
-    .attr("cy",0)
-    .attr("r", 3)
-    .style("fill", "Green")
-
-svg.append("circle")
-    .attr("cx",600)
-    .attr("cy",10)
-    .attr("r", 3)
-    .style("fill", "Blue")
-
-svg.append("text")
-    .attr("x", 620)
-    .attr("y", 10)
-    .text("Avinash")
-    .style("font-size", "15px")
-    .attr("alignment-baseline","middle")
-svg.append("text")
-    .attr("x", 620)
-    .attr("y", -30)
-    .text("Juhan")
-    .style("font-size", "15px")
-    .attr("alignment-baseline","right")
-
-svg.append("text")
-    .attr("x", 620)
-    .attr("y", -20)
-    .text("Daniel")
-    .style("font-size", "15px")
-    .attr("alignment-baseline","middle")
-
-svg.append("text")
-    .attr("x", 620)
-    .attr("y", -10)
-    .text("Viet")
-    .style("font-size", "15px")
-    .attr("alignment-baseline","middle")
-
-svg.append("text")
-    .attr("x", 620)
-    .attr("y", 0)
-    .text("Average")
-    .style("font-size", "15px")
-    .attr("alignment-baseline","middle")
+svg.append("circle").attr("cx",600).attr("cy",70).attr("r", 6).style("fill", "Red")
+svg.append("circle").attr("cx",600).attr("cy",90).attr("r", 6).style("fill", "Orange")
+svg.append("circle").attr("cx",600).attr("cy",110).attr("r", 6).style("fill", "Yellow")
+svg.append("circle").attr("cx",600).attr("cy",130).attr("r", 6).style("fill", "Green")
+svg.append("circle").attr("cx",600).attr("cy",150).attr("r", 6).style("fill", "Blue")
+svg.append("text").attr("x", 620).attr("y", 70).text("Avinash").style("font-size", "10px").attr("alignment-baseline","middle")
+svg.append("text").attr("x", 620).attr("y", 90).text("Juhan").style("font-size", "10px").attr("alignment-baseline","middle")
+svg.append("text").attr("x", 620).attr("y", 110).text("Daniel").style("font-size", "10px").attr("alignment-baseline","middle")
+svg.append("text").attr("x", 620).attr("y", 130).text("Viet").style("font-size", "10px").attr("alignment-baseline","middle")
+svg.append("text").attr("x", 620).attr("y", 150).text("Average").style("font-size", "10px").attr("alignment-baseline","middle")
 
 })
 
