--- a/PrecipitationRegression.html
+++ b/PrecipitationRegression.html
@@ -105,7 +105,7 @@ var line = d3.svg.line()
     .attr("text-anchor", "middle")
     .style("font-size", "16px")
     .style("text-decoration", "underline")
-    .text("Scatter plot of walked distance vs precipitation with regression line");
+    .text("Scatter plot of walking distance vs precipitation with regression line");
   svg.append("g")
       .attr("class", "x axis")
       .attr("transform", "translate(0," + height + ")")
