--- a/vietanhWind.html
+++ b/vietanhWind.html
@@ -69,7 +69,7 @@ d3.csv("https://raw.githubusercontent.com/avinashjairam/Data-Visualization-Class
     .attr("text-anchor", "middle")
     .style("font-size", "18px")
     .style("text-decoration", "underline")
-    .text("Scatter plot of walked distance vs average wind speed");
+    .text("Scatter plot of walking distance vs average wind speed");
     // Add Y axis label
     svg.append("text")
       .attr("text-anchor", "end")
